update 3d scatter ex

--- a/_posts/python/3d-scatter/2015-06-30-3d_scatter.html
+++ b/_posts/python/3d-scatter/2015-06-30-3d_scatter.html
@@ -3,11 +3,11 @@ permalink: python/3d-scatter-plots
 description: How to make 3D scatter plots in Python with Plotly.
 title: 3D Python Scatter Plots | plotly
 has_thumbnail: true
-thumbnail: /images/3d-scatter.jpg
+thumbnail: thumbnail/3d-scatter.jpg
 layout: user-guide
 name: 3D Scatter Plots
 language: python
-display_as: chart_type
+display_as: 3d_charts
 has_thumbnail: true
 page_type: example_index
 order: 1
