--- a/_posts/plotly_js/config-options/2015-09-24-config_options_index.html
+++ b/_posts/plotly_js/config-options/2015-09-24-config_options_index.html
@@ -18,6 +18,11 @@ View the full list of configuration options in the
 <a href="https://github.com/plotly/plotly.js/blob/master/src/plot_api/plot_config.js#L22-L86" target="_blank">
 plotly.js source code on GitHub
 </a>.
+<br>
+<br>
+<b>For Enterprise Users</b>: For Configuring the On-Premise Version, The custom domain should be set by adding the following line in the javascript code:
+<code><pre>PLOTLYENV = 'https://&ltdomain&gt.plot.ly';</code></pre>
+
 
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","configuration" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
