--- a/_posts/matlab/3d-surface/2016-02-23-function-of-two-vars.html
+++ b/_posts/matlab/3d-surface/2016-02-23-function-of-two-vars.html
@@ -8,6 +8,8 @@ order: 2
 sitemap: false
 description: Inspired from <a href="http://in.mathworks.com/help/symbolic/ezsurf.html">Matlab Docs</a>.
 ---
+% Learn about API authentication here: https://plot.ly/matlab/getting-started
+% Find your api_key here: https://plot.ly/settings/api
 
 f = @(x, y) real(atan(x + i*y));
 ezsurf(f);
