More examples, edits

--- a/_posts/matlab/line_exclusive/2015-04-09-matlab-line-markers.html
+++ b/_posts/matlab/line_exclusive/2015-04-09-matlab-line-markers.html
@@ -1,5 +1,5 @@
 ---
-name: MATLAB Line Plot Marker Types
+name: MATLAB Line Plot Marker Types and Colors
 plot_url: https://plot.ly/~PlotBot/98
 arrangement: horizontal
 language: matlab
