--- a/_posts/matlab/line_exclusive/2016-02-24-matlab-line-from-excel.html
+++ b/_posts/matlab/line_exclusive/2016-02-24-matlab-line-from-excel.html
@@ -1,5 +1,5 @@
 ---
-name: Creating Graph from Excel Data
+name: Creating Graph from Excel File
 plot_url: https://plot.ly/~tarzzz/1518/
 arrangement: horizontal
 language: matlab
