--- a/_posts/user_guide_python/2015-06-30-s7_streaming.html
+++ b/_posts/user_guide_python/2015-06-30-s7_streaming.html
@@ -279,9 +279,7 @@ Plotly's interactibility happens in real-time.</p>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Making Plotly streaming plots requires no modifications to the sign in process; however, users must generate stream <em>tokens</em> or <em>ids</em>. To do so, first sign in on <a href="https://plot.ly" target="_blank">plot.ly</a>. Once that is done, click on the <em>Settings</em> button in the upper-right corner of the page:</p>
 <p><img src="http://i.imgur.com/RNExysW.png" style="margin-top:1em; margin-bottom:1em" /></p>
-<p style="margin-top:1.5em;,margin-bottom:1.5em">Under the *Stream Tokens* tab, click on the *Generate Token* button:</p>
-
-<p><img src="http://i.imgur.com/o5Uguye.png" /></p>
+<p style="margin-top:1.5em;,margin-bottom:1.5em">Under the *Stream Tokens* tab, click on the *Generate Token* button:</p><p><img src="http://i.imgur.com/o5Uguye.png" /></p>
 <p>And there you go, you have generated a stream token. Please note that:</p>
 <blockquote><p>You must generate one stream token per <strong>trace</strong> to be plotted in each of your Plotly streaming plots.</p>
 </blockquote>
@@ -351,9 +349,7 @@ Plotly's interactibility happens in real-time.</p>
 <div class="text_cell_render border-box-sizing rendered_html">
 <h4 style="font-size:14pt;">Go to User Guide's
 
-[homepage](https://plot.ly/python/user-guide) </h4>
-
-<hr>
+[homepage](https://plot.ly/python/user-guide) </h4><hr>
 </div>
 </div>
 </div>
@@ -365,11 +361,7 @@ Plotly's interactibility happens in real-time.</p>
 <div style="float:right; \">
     <img src="http://i.imgur.com/4vwuxdJ.png" 
  align=right style="float:right; margin-left: 5px; margin-top: -10px" />
-</div>
-
-<h4>Got Questions or Feedback? </h4>
-
-<p>Reach us here at: <a href="https://community.plot.ly" target="_blank">Plotly Community</a></p>
+</div><h4>Got Questions or Feedback? </h4><p>Reach us here at: <a href="https://community.plot.ly" target="_blank">Plotly Community</a></p>
 <p><h4> Want to know what's going on at Plotly? </h4>
 Check out our twitter: 
 <a href="https://twitter.com/plotlygraphs" target="_blank">@plotlygraphs</a></p>
