trailing slash pt 2

--- a/_posts/user_guide_python/2015-06-30-s7_streaming.html
+++ b/_posts/user_guide_python/2015-06-30-s7_streaming.html
@@ -1,9 +1,9 @@
 ---
-permalink: python/intro_streaming
+permalink: python/intro_streaming/
 description: Getting Started with Plotly Streaming
 title: Getting Started with Plotly Streaming
 has_thumbnail: true
-thumbnail: 
+thumbnail:
 has_thumbnail: false
 layout: getstart
 page_type: u-guide
@@ -36,7 +36,7 @@ title: Getting Started with Plotly Streaming
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Welcome to Plotly's Python API User Guide.</p>
 <blockquote><p>Links to the other sections are on the User Guide's <a href="https://plot.ly/python/user-guide#Table-of-Contents:">homepage</a> <br>
-The Github repository is available 
+The Github repository is available
 <a href="https://github.com/plotly/python-user-guide" target="_blank">here</a></p>
 </blockquote>
 
@@ -71,7 +71,7 @@ The Github repository is available
 &gt;&gt;&gt; # auto sign-in with credentials or use py.sign_in()
 &gt;&gt;&gt; trace1 = Scatter(
         x=[],
-        y=[], 
+        y=[],
         stream=dict(token='my_stream_id')
     )
 &gt;&gt;&gt; data = Data([trace1])
@@ -103,7 +103,7 @@ The Github repository is available
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="c"># (*) Import plotly package</span>
 <span class="kn">import</span> <span class="nn">plotly</span>
- 
+
 <span class="c"># Check plolty version (if not latest, please upgrade)</span>
 <span class="n">plotly</span><span class="o">.</span><span class="n">__version__</span>
 </pre></div>
@@ -174,14 +174,14 @@ Readers looking for info about the nuts and bolts of Plotly's streaming API shou
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="c"># (*) To communicate with Plotly&#39;s server, sign in with credentials file</span>
-<span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>  
- 
+<span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
+
 <span class="c"># (*) Useful Python/Plotly tools</span>
-<span class="kn">import</span> <span class="nn">plotly.tools</span> <span class="kn">as</span> <span class="nn">tls</span>   
- 
+<span class="kn">import</span> <span class="nn">plotly.tools</span> <span class="kn">as</span> <span class="nn">tls</span>
+
 <span class="c"># (*) Graph objects</span>
 <span class="kn">from</span> <span class="nn">plotly.graph_objs</span> <span class="kn">import</span> <span class="o">*</span>
- 
+
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="kn">as</span> <span class="nn">np</span>  <span class="c"># (*) numpy for math functions and arrays</span>
 </pre></div>
 
@@ -257,7 +257,7 @@ Readers looking for info about the nuts and bolts of Plotly's streaming API shou
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Data is sent in real-time. <br>
-Plotly draws the data in real-time. <br> 
+Plotly draws the data in real-time. <br>
 Plotly's interactibility happens in real-time.</p>
 
 </div>
@@ -335,7 +335,7 @@ Plotly's interactibility happens in real-time.</p>
 </ul>
 <p>In addition, here is a notebook of another Plotly streaming plot:</p>
 <ul>
-<li><a href="http://nbviewer.ipython.org/gist/empet/a03885a54c256a21c514" target="_blank">Streaming the Poisson Pareto Burst Process</a> by 
+<li><a href="http://nbviewer.ipython.org/gist/empet/a03885a54c256a21c514" target="_blank">Streaming the Poisson Pareto Burst Process</a> by
 <a href="https://github.com/empet" target="_blank">Emilia Petrisor</a></li>
 </ul>
 
@@ -359,11 +359,11 @@ Plotly's interactibility happens in real-time.</p>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <div style="float:right; \">
-    <img src="http://i.imgur.com/4vwuxdJ.png" 
+    <img src="http://i.imgur.com/4vwuxdJ.png"
  align=right style="float:right; margin-left: 5px; margin-top: -10px" />
 </div><h4>Got Questions or Feedback? </h4><p>Reach us here at: <a href="https://community.plot.ly" target="_blank">Plotly Community</a></p>
 <p><h4> Want to know what's going on at Plotly? </h4>
-Check out our twitter: 
+Check out our twitter:
 <a href="https://twitter.com/plotlygraphs" target="_blank">@plotlygraphs</a></p>
 
 </div>
