--- a/_posts/matlab/line_exclusive/2015-04-09-matlab-line-style.html
+++ b/_posts/matlab/line_exclusive/2015-04-09-matlab-line-style.html
@@ -1,5 +1,5 @@
 ---
-name: MATLAB Plot Colors and Symbols
+name: MATLAB Plot Colors Symbols and line width
 plot_url: https://plot.ly/~PlotBot/99
 arrangement: horizontal
 language: matlab
