Changed Section Headers

--- a/_posts/ggplot2/Geoms/geom_abline/2015-07-16-geom_abline_index.html
+++ b/_posts/ggplot2/Geoms/geom_abline/2015-07-16-geom_abline_index.html
@@ -8,7 +8,7 @@ thumbnail: thumbnail/ipython_graph_email.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
-display_as: geoms
+display_as: basic
 redirect_from: ggplot2/line-shapes/
 ---
 {% assign examples = site.posts | where:"language","ggplot2" | where:"suite","geom_abline" | sort: "order" %}
