--- a/_posts/ggplot2/Geoms/geom_errobar/2015-08-25-errorbar_index.html
+++ b/_posts/ggplot2/Geoms/geom_errobar/2015-08-25-errorbar_index.html
@@ -8,7 +8,7 @@ thumbnail: thumbnail/error-bar.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
-display_as: geoms
+display_as: statistical
 order: 18
 ---
 {% assign examples = site.posts | where:"language","ggplot2" | where:"suite","errorbar" | sort: "order" %}
