--- a/_posts/ggplot2/Theme/axis.text/2016-01-27-Themes_axistext_index.html
+++ b/_posts/ggplot2/Theme/axis.text/2016-01-27-Themes_axistext_index.html
@@ -1,14 +1,14 @@
 ---
 title: ggplot2 theme | Examples | Plotly
 name: axis.text
-permalink: ggplot2/axis_text/
+permalink: ggplot2/axis-text/
 description: How modify axis labels in R and ggplot2
 layout: base
 thumbnail: thumbnail/theme_image2.png
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
-display_as: theme
+display_as: layout_opt
 ---
 {% assign examples = site.posts | where:"language","ggplot2" | where: "suite","axis.text" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
