--- a/_posts/ggplot2/hover/2015-08-20-hover_index.html
+++ b/_posts/ggplot2/hover/2015-08-20-hover_index.html
@@ -8,7 +8,7 @@ thumbnail: thumbnail/hover.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
-display_as: other
+display_as: layout_opt
 redirect_from: ggplot2/maps/
 order: 1
 ---
