--- a/_posts/ggplot2/Faceting/facet_grid/2015-04-09-facets_ggplot2_index.html
+++ b/_posts/ggplot2/Faceting/facet_grid/2015-04-09-facets_ggplot2_index.html
@@ -8,7 +8,7 @@ thumbnail: thumbnail/facet_grid.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
-display_as: faceting
+display_as: layout_opt
 ---
 {% assign examples = site.posts | where:"language","ggplot2" | where:"suite","grid" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
