--- a/_posts/ggplot2/Faceting/facet_wrap/2015-07-14-facet_wrap_index.html
+++ b/_posts/ggplot2/Faceting/facet_wrap/2015-07-14-facet_wrap_index.html
@@ -8,7 +8,7 @@ thumbnail: thumbnail/facet_wrap.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
-display_as: faceting
+display_as: layout_opt
 ---
 {% assign examples = site.posts | where:"language","ggplot2" | where:"suite","wrap" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
