--- a/_posts/ggplot2/Geoms/geom_boxplot/2015-07-14-box_ggplot2_index.html
+++ b/_posts/ggplot2/Geoms/geom_boxplot/2015-07-14-box_ggplot2_index.html
@@ -8,7 +8,7 @@ thumbnail: thumbnail/box.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
-display_as: geoms
+display_as: statistical
 ---
 {% assign examples = site.posts | where:"language","ggplot2" | where:"suite","box" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
