--- a/_posts/ggplot2/Geoms/geom_density/2015-08-06-geom_density_index.html
+++ b/_posts/ggplot2/Geoms/geom_density/2015-08-06-geom_density_index.html
@@ -8,7 +8,7 @@ thumbnail: thumbnail/stat_density.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
-display_as: geoms
+display_as: basic
 ---
 {% assign examples = site.posts | where:"language","ggplot2" | where:"suite","density" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
