--- a/_posts/ggplot2/Geoms/geom_line/2015-07-17-geom_line_ggplot2_index.html
+++ b/_posts/ggplot2/Geoms/geom_line/2015-07-17-geom_line_ggplot2_index.html
@@ -8,7 +8,7 @@ thumbnail: thumbnail/line_shapes.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
-display_as: geoms
+display_as: basic
 redirect_from: ggplot2/themes/
 ---
 {% assign examples = site.posts | where:"language","ggplot2" | where:"suite","geom_line" | sort: "order" %}
