--- a/_posts/ggplot2/Geoms/geom_point/2015-07-13-geom_point_ggplot2_index.html
+++ b/_posts/ggplot2/Geoms/geom_point/2015-07-13-geom_point_ggplot2_index.html
@@ -8,7 +8,7 @@ thumbnail: thumbnail/gg-themes.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
-display_as: geoms
+display_as: basic
 redirect_from: ggplot2/line-and-scatter/
 ---
 {% assign examples = site.posts | where:"language","ggplot2" | where:"suite","geom_point" | sort: "order" %}
