--- a/_posts/ggplot2/Geoms/geom_polygon/2015-04-09-geom_polygon_ggplot2_index.html
+++ b/_posts/ggplot2/Geoms/geom_polygon/2015-04-09-geom_polygon_ggplot2_index.html
@@ -8,7 +8,7 @@ thumbnail: thumbnail/shape.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
-display_as: geoms
+display_as: basic
 ---
 {% assign examples = site.posts | where:"language","ggplot2" | where:"suite","geom_polygon" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
