--- a/_posts/ggplot2/time-series/2015-07-14-time-series_ggplot2_index.html
+++ b/_posts/ggplot2/time-series/2015-07-14-time-series_ggplot2_index.html
@@ -1,14 +1,14 @@
 ---
 title: ggplot2 scale_x_date | Examples | Plotly
 name: scale_x_date
-permalink: ggplot2/scale_x_date/
+permalink: ggplot2/scale-x/
 description: How to make plots in R and ggplot2 using scale_x_date.
 layout: base
 thumbnail: thumbnail/time-series.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
-display_as: other
+display_as: layout_opt
 ---
 {% assign examples = site.posts | where:"language","ggplot2" | where:"suite","scale_x_date" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
