--- a/_posts/ggplot2/yscale/2015-07-20-log_scale_index.html
+++ b/_posts/ggplot2/yscale/2015-07-20-log_scale_index.html
@@ -1,14 +1,14 @@
 ---
 title: ggplot2 scale_y_continuous | Examples | Plotly
 name: scale_y_continuous
-permalink: ggplot2/scale_y_continuous/
+permalink: ggplot2/scale-y/
 description: How to use logarithmic scales with ggplot2 axes.
 layout: base
 thumbnail: thumbnail/log.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
-display_as: other
+display_as: layout_opt
 ---
 {% assign examples = site.posts | where:"language","ggplot2" | where:"suite","yscale" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
