--- a/_posts/user_guide_python/2015-06-30-s7_streaming_p1-first-stream.html
+++ b/_posts/user_guide_python/2015-06-30-s7_streaming_p1-first-stream.html
@@ -5,7 +5,7 @@ title: Getting Started with Plotly Streaming
 has_thumbnail: true
 thumbnail:
 has_thumbnail: false
-layout: getstart
+layout: user-guide
 page_type: u-guide
 language: python
 title: Getting Started with Plotly Streaming
@@ -50,9 +50,9 @@ The Github repository is available
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Section 7 is divided, into separate notebooks, as follows:</p>
 <ul>
-<li><p><a href="https://plot.ly/python/streaming-tutorial">7.0 Streaming API introduction</a></p>
+<li><p><a href="https://plot.ly/python/intro_streaming">7.0 Streaming API introduction</a></p>
 </li>
-<li><p><a href="https://plot.ly/python/streaming-line-tutorial">7.1 A First Plotly Streaming Plot</a></p>
+<li><p><a href="https://plot.ly/python/streaming_part1">7.1 A First Plotly Streaming Plot</a></p>
 </li>
 </ul>
 
@@ -904,35 +904,6 @@ that the graphs are plotting identical data!).</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Subsections of section 7:</p>
-<ul>
-<li><p><a href="https://plot.ly/python/streaming-tutorial">7.0 Streaming API introduction</a></p>
-</li>
-<li><p><a href="https://plot.ly/python/streaming-line-tutorial">7.1 A first Plotly streaming plot</a></p>
-</li>
-</ul>
-
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<h4 style="font-size:14pt;">Go to User Guide's
-
-[homepage](https://plot.ly/python/user-guide) </h4>
-
-<hr>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
 <div style="float:right; \">
     <img src="http://i.imgur.com/4vwuxdJ.png"
  align=right style="float:right; margin-left: 5px; margin-top: -10px" />
@@ -941,7 +912,7 @@ that the graphs are plotting identical data!).</p>
 <h4>Got Questions or Feedback? </h4>
 
 <p>Reach us here at: <a href="https://community.plot.ly" target="_blank">Plotly Community</a></p>
-<p><h4> Want to know what's going on at Plotly? </h4>
+<p><h4> What's going on at Plotly? </h4>
 Check out our twitter:
 <a href="https://twitter.com/plotlygraphs" target="_blank">@plotlygraphs</a></p>
 
