--- a/_posts/user_guide_python/2015-06-30-user-g.html
+++ b/_posts/user_guide_python/2015-06-30-user-g.html
@@ -1,11 +1,11 @@
 ---
-permalink: python/user-g
+permalink: python/user-g/
 description: Getting Started with Plotly for Python
 title: Getting Started Plotly for Python
 has_thumbnail: true
-thumbnail: 
+thumbnail:
 has_thumbnail: false
-layout: getstart
+layout: user-guide
 page_type: u-guide
 language: python
 title: Getting Started Plotly for Python
@@ -82,14 +82,17 @@ title: Getting Started Plotly for Python
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>The user guide will be split into the following sections:</p>
-<ol>
-<li><a href="https://plot.ly/python/overview">Getting Started with Plotly</a></li>
-<li><a href="https://plot.ly/python/line-and-scatter-plots-tutorial">Line and Scatter Plots</a></li>
-<li><a href="https://plot.ly/python/bar-charts-tutorial">Bar Charts</a></li>
-<li><a href="https://plot.ly/python/bubble-charts-tutorial">Bubble Charts</a></li>
-<li><a href="https://plot.ly/python/histograms-and-box-plots-tutorial">Histograms and Box Plots</a></li>
-</ol>
-<p><a href="https://plot.ly/python/python-tutorial">Appendix A: Getting Started with Python</a></p>
+<ul>
+<li>Section 0. <a href="https://plot.ly/python/overview">Getting Started with Plotly</a></li>
+<li>Section 1. <a href="https://plot.ly/python/line-and-scatter-plots-tutorial">Line and Scatter Plots</a></li>
+<li>Section 2. <a href="https://plot.ly/python/bar-charts-tutorial">Bar Charts</a></li>
+<li>Section 3. <a href="https://plot.ly/python/bubble-charts-tutorial">Bubble Charts</a></li>
+<li>Section 4. <a href="https://plot.ly/python/histograms-and-box-plots-tutorial">Histograms and Box Plots</a></li>
+<li>Section 5. <a href="https://plot.ly/python/heatmaps-contours-and-2dhistograms-tutorial">Heatmaps, Contours and 2D Histograms</a></li>
+<li>Section 6. [Converting Mat</li>
+<li>Section 7. <a href="https://plot.ly/python/intro_streaming">Streaming API</a>
+<a href="https://plot.ly/python/python-tutorial">Appendix A: Getting Started with Python</a></li>
+</ul>
 
 </div>
 </div>
@@ -100,7 +103,7 @@ title: Getting Started Plotly for Python
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Want-to-know-what's-going-on-at-Plotly?">Want to know what's going on at Plotly?<a class="anchor-link" href="#Want-to-know-what's-going-on-at-Plotly?">&#182;</a></h3><ul>
-<li>Follow us on twitter: 
+<li>Follow us on twitter:
 <a href="https://twitter.com/plotlygraphs">@plotlygraphs</a></li>
 </ul>
 <h3 id="Issues-or-suggestions-for-the-user-guide?">Issues or suggestions for the user guide?<a class="anchor-link" href="#Issues-or-suggestions-for-the-user-guide?">&#182;</a></h3><ul>
