--- a/_posts/ggplot2/Aesthetics/2016-01-27-aes_index.html
+++ b/_posts/ggplot2/Aesthetics/2016-01-27-aes_index.html
@@ -8,7 +8,7 @@ thumbnail: thumbnail/aesthetics_image.png
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
-display_as: layout_options
+display_as: layout_opt
 ---
 {% assign examples = site.posts | where:"language","ggplot2" | where:"suite","aes" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
