--- a/_posts/user_guide_python/2015-06-30-user-g.html
+++ b/_posts/user_guide_python/2015-06-30-user-g.html
@@ -90,8 +90,8 @@ title: Getting Started Plotly for Python
 <li>Section 4. <a href="https://plot.ly/python/histograms-and-box-plots-tutorial">Histograms and Box Plots</a></li>
 <li>Section 5. <a href="https://plot.ly/python/heatmaps-contours-and-2dhistograms-tutorial">Heatmaps, Contours and 2D Histograms</a></li>
 <li>Section 6. <a href="https://plot.ly/python/matplotlib-to-plotly-tutorial">Converting Matplotlib Figures to Plotly</a></li>
-<li>Section 7. <a href="https://plot.ly/python/intro_streaming">Streaming API</a>
-<a href="https://plot.ly/python/python-tutorial">Appendix A: Getting Started with Python</a></li>
+<li>Section 7. <a href="https://plot.ly/python/intro_streaming">Streaming API</a></li>
+<li><a href="https://plot.ly/python/python-tutorial">Appendix A: Getting Started with Python</a></li>
 </ul>
 
 </div>
