updated grammar and permalink

--- a/_posts/user_guide_python/2015-06-30-user-g.html
+++ b/_posts/user_guide_python/2015-06-30-user-g.html
@@ -1,9 +1,9 @@
 ---
-permalink: python/user-g/
+permalink: python/userguide
 description: Getting Started with Plotly for Python
 title: Getting Started Plotly for Python
 has_thumbnail: true
-thumbnail:
+thumbnail: 
 has_thumbnail: false
 layout: user-guide
 page_type: u-guide
@@ -103,7 +103,7 @@ title: Getting Started Plotly for Python
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Want-to-know-what's-going-on-at-Plotly?">Want to know what's going on at Plotly?<a class="anchor-link" href="#Want-to-know-what's-going-on-at-Plotly?">&#182;</a></h3><ul>
-<li>Follow us on twitter:
+<li>Follow us on twitter: 
 <a href="https://twitter.com/plotlygraphs">@plotlygraphs</a></li>
 </ul>
 <h3 id="Issues-or-suggestions-for-the-user-guide?">Issues or suggestions for the user guide?<a class="anchor-link" href="#Issues-or-suggestions-for-the-user-guide?">&#182;</a></h3><ul>
