updated grammar and permalink

--- a/_posts/user_guide_python/2015-06-30-user-g.html
+++ b/_posts/user_guide_python/2015-06-30-user-g.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/userguide
+permalink: python/userguide/
 description: Getting Started with Plotly for Python
 title: Getting Started Plotly for Python
 has_thumbnail: true
@@ -38,16 +38,7 @@ title: Getting Started Plotly for Python
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>This user guide will provide an in-depth overview of the steps required to get you first <code>Plotly</code> graph up and running, as well more specific and thorough guides on a few of our most popular chart types. Hopefully by the end of the user guide you will have a good idea of how Plotly graphs are defined and constructed, and be on your way to creating amazing data visualizations of your own.</p>
-
-</div>
-</div>
-</div>
+This user guide will provide an in-depth overview of the steps required to get your first `Plotly` graph up and running, as well as more specific and thorough guides on a few of our most popular graph types. Hopefully by the end of the user guide you will have a good idea of how Plotly graphs are defined and constructed, and be on your way to creating amazing data visualizations of your own. 
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
