--- a/_posts/user_guide_python/2015-06-30-s7_streaming.html
+++ b/_posts/user_guide_python/2015-06-30-s7_streaming.html
@@ -35,9 +35,7 @@ title: Getting Started with Plotly Streaming
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Welcome to Plotly's Python API User Guide.</p>
-<blockquote><p>Links to the other sections are on the User Guide's <a href="https://plot.ly/python/user-guide#Table-of-Contents:">homepage</a> <br>
-The Github repository is available 
-<a href="https://github.com/plotly/python-user-guide" target="_blank">here</a></p>
+<blockquote><p>Links to the other sections are on the User Guide's <a href="https://plot.ly/python/userguide">homepage</a></p>
 </blockquote>
 
 </div>
@@ -134,22 +132,12 @@ The Github repository is available
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>See the User Guide's <a href="https://plot.ly/python/user-guide#Installation-guidelines" target="_blank">homepage</a> for more info on installation and upgrading.</p>
-
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
 <hr>
 
 <p>Plotly's Streaming API enables your Plotly plots to update in real-time, without refreshing your browser. In other words, users can <em>continuously</em> send data to Plotly's servers and visualize this data in <em>real-time</em>.</p>
 <p>For example, imagine that you have a thermometer (hooked to an Arduino for example) in your attic and you would like to monitor the temperature readings from your laptop. Plotly together with its streaming API makes this project easy to achieve.</p>
 <p>With Ploly's Streaming API:</p>
-<blockquote><p>Everyone looking at a Plotly streaming plot sees the same data, updating at the same time. Like all Plotly plots, Plotly streaming plots are immediately shareable by shortlink, embedded in website, or an IPython notebook. Owners of the Plotly plot can edit the plot with the Plotly web GUI while all viewers will see these changes live.</p>
+<blockquote><p>Everyone looking at a Plotly streaming plot sees the same data updating at the same time. Like all Plotly plots, Plotly streaming plots are immediately shareable by shortlink, embedded in website, or in an IPython notebook. Owners of the Plotly plot can edit the plot with the Plotly web GUI and all viewers will see these changes live.</p>
 </blockquote>
 <p>And for the skeptical among us, <em>it's fast</em>: plots update up to 20 times per second.</p>
 <p>In this section, we present examples of how to make Plotly streaming plots.
@@ -195,27 +183,7 @@ Readers looking for info about the nuts and bolts of Plotly's streaming API shou
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>If you are not familiar with credentials files, refer to the User Guide's <a href="https://plot.ly/python/user-guide#Step-6" target="_blank">homepage</a>.</p>
-
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
 <h5 id="What-do-Plotly-streaming-plots-look-like?">What do Plotly streaming plots look like?<a class="anchor-link" href="#What-do-Plotly-streaming-plots-look-like?">&#182;</a></h5>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>This</p>
-
 </div>
 </div>
 </div>
@@ -277,13 +245,13 @@ Plotly's interactibility happens in real-time.</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Making Plotly streaming plots requires no modifications to the sign in process; however, users must generate stream <em>tokens</em> or <em>ids</em>. To do so, first sign in on <a href="https://plot.ly" target="_blank">plot.ly</a>. Once that is done, click on the <em>Settings</em> button in the upper-right corner of the page:</p>
+<p>Making Plotly streaming plots requires no modifications to the sign in process; however, users must generate stream <em>tokens</em> or <em>ids</em>. To do so, first sign-in to <a href="https://plot.ly" target="_blank">plot.ly</a>. Once that is done, click on the <em>Settings</em> button in the upper-right corner of the page:</p>
 <p><img src="http://i.imgur.com/RNExysW.png" style="margin-top:1em; margin-bottom:1em" /></p>
-<p style="margin-top:1.5em;,margin-bottom:1.5em">Under the *Stream Tokens* tab, click on the *Generate Token* button:</p>
+<p style="margin-top:1.5em;,margin-bottom:1.5em">Under the <b>Stream Tokens</b> tab, click on the <b>Generate Token</b> button:</p>
 
 <p><img src="http://i.imgur.com/o5Uguye.png" /></p>
 <p>And there you go, you have generated a stream token. Please note that:</p>
-<blockquote><p>You must generate one stream token per <strong>trace</strong> to be plotted in each of your Plotly streaming plots.</p>
+<blockquote><p>You must generate one stream token per <strong>trace</strong> in your Plotly streaming plot.</p>
 </blockquote>
 <p>If you are looking to run this notebook with you own account, please generate 4 unique stream tokens and add them to your credentials file by entering:</p>
 
