removed github link

--- a/_posts/user_guide_python/2015-06-30-s7_streaming.html
+++ b/_posts/user_guide_python/2015-06-30-s7_streaming.html
@@ -298,7 +298,7 @@ Plotly's interactibility happens in real-time.</p>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>We are now ready to start making Plotly streaming plots!</p>
-<p>The content of this section has been divided into separate IPython notebooks as loading multiple streaming at once can cause performance slow downs on some internet connections.</p>
+<p>The content of this section has been divided into separate IPython notebooks as loading multiple streaming plots at once can cause performance slow downs on some internet connections.</p>
 <p>Here are the links to the subsections' notebooks:</p>
 <ul>
 <li><a href="https://plot.ly/python/intro_streaming">7.0 Streaming API introduction</a></li>
