--- a/_posts/user_guide_python/2015-06-30-s7_streaming_p1-first-stream.html
+++ b/_posts/user_guide_python/2015-06-30-s7_streaming_p1-first-stream.html
@@ -876,13 +876,13 @@ that the graphs are plotting identical data!).</p>
 <p>Simply put, Plotly's streaming API is awesome!</p>
 <p>In brief: to make a Plotly streaming plot:</p>
 <ol>
-<li><p>Make a stream id object (<code>Stream</code> in the <code>plotly.graph_objs</code> module) containing the <code>stream id</code>(which is found in the <strong>settings</strong> of your Plotly account) and the maximum number of points to be keep on screen (which is optional).</p>
+<li><p>Make a <code>stream id object</code> (<code>Stream</code> in the <code>plotly.graph_objs</code> module) containing the <code>stream id</code>(which is found in the <strong>settings</strong> of your Plotly account) and the maximum number of points to be keep on screen (which is optional).</p>
 </li>
-<li><p>Provide the stream id obect as the key value for the <code>stream</code> attribute of your trace object.</p>
+<li><p>Provide the <code>stream id object</code> as the key value for the <code>stream</code> attribute in your trace object.</p>
 </li>
-<li><p>Make a stream link object (<code>py.Stream</code>) containing the same stream id as the stream id object and open the stream with the <code>.open()</code> method.</p>
+<li><p>Make a <code>stream link object</code> (<code>py.Stream</code>) containing the same stream id as the <code>stream id object</code> and open the stream with the <code>.open()</code> method.</p>
 </li>
-<li><p>Write data to the stream link object with the <code>.write()</code> method. When done, close the stream with the <code>.close()</code> method.</p>
+<li><p>Write data to the <code>stream link object</code> with the <code>.write()</code> method. When done, close the stream with the <code>.close()</code> method.</p>
 </li>
 </ol>
 
