--- a/_posts/user_guide_python/2015-06-30-s7_streaming_p1-first-stream.html
+++ b/_posts/user_guide_python/2015-06-30-s7_streaming_p1-first-stream.html
@@ -35,9 +35,7 @@ title: Getting Started with Plotly Streaming
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Welcome to Plotly's Python API User Guide.</p>
-<blockquote><p>Links to the other sections are on the User Guide's <a href="https://plot.ly/python/user-guide#Table-of-Contents:">homepage</a> <br>
-The Github repository is available 
-<a href="https://github.com/plotly/python-user-guide" target="_blank">here</a></p>
+<blockquote><p>Links to the other sections are on the User Guide's <a href="https://plot.ly/python/user-guide#Table-of-Contents:">homepage</a></p>
 </blockquote>
 
 </div>
