some styling updates

--- a/_posts/user_guide_python/2015-06-30-user-g.html
+++ b/_posts/user_guide_python/2015-06-30-user-g.html
@@ -38,7 +38,16 @@ title: Getting Started Plotly for Python
 </div>
 </div>
 </div>
-This user guide will provide an in-depth overview of the steps required to get your first `Plotly` graph up and running, as well as more specific and thorough guides on a few of our most popular graph types. Hopefully by the end of the user guide you will have a good idea of how Plotly graphs are defined and constructed, and be on your way to creating amazing data visualizations of your own. 
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>This user guide will provide an in-depth overview of the steps required to get your first <code>Plotly</code> graph up and running, as well as more specific and thorough guides on a few of our most popular graph types. Hopefully by the end of this user guide you will have a good idea of how Plotly graphs are defined and constructed, and be on your way to creating amazing data visualizations of your own.</p>
+
+</div>
+</div>
+</div>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
@@ -72,7 +81,7 @@ This user guide will provide an in-depth overview of the steps required to get y
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>The user guide will be split into the following sections:</p>
+<p>The user guide is split into the following sections:</p>
 <ul>
 <li>Section 0. <a href="https://plot.ly/python/overview">Getting Started with Plotly</a></li>
 <li>Section 1. <a href="https://plot.ly/python/line-and-scatter-plots-tutorial">Line and Scatter Plots</a></li>
