--- a/_posts/user_guide_python/2015-06-30-s7_streaming.html
+++ b/_posts/user_guide_python/2015-06-30-s7_streaming.html
@@ -26,7 +26,7 @@ title: Getting Started with Plotly Streaming
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Welcome to Plotly's Python API User Guide.</p>
-<blockquote><p>Links to the other sections are on the User Guide's <a href="https://plot.ly/python/userguide">homepage</a></p>
+<blockquote><p>Links to the other sections can be found on the User Guide's <a href="https://plot.ly/python/userguide">homepage</a></p>
 </blockquote>
 
 </div>
