Added Axis Label and title related examples

--- a/_posts/matlab/labels/2016-03-01-matlab-custom-axis-label.html
+++ b/_posts/matlab/labels/2016-03-01-matlab-custom-axis-label.html
@@ -1,10 +1,10 @@
 ---
-name: Setting Title Font Size and Font Family
-plot_url: https://plot.ly/~tarzzz/1496/
+name: Custom Axis Label (size, Font and Position)
+plot_url: https://plot.ly/~tarzzz/1752/
 arrangement: horizontal
 language: matlab
 suite: labels
-order: 1
+order: 3
 sitemap: false
 ---
 
@@ -15,7 +15,9 @@ x = randi([0 100],1,100);
 y = randi([0 100],1,100);
 fig = figure;
 plot(x,y,'bo');
-title('Custom Title','FontSize',24,'Color','g','FontName','FixedWidth');
+title('Custom Axis Labels');
+xlabel('X Label','FontSize',20,'Color','b','Position',[50 -10]);
+ylabel('Y Label','FontSize',20,'Color','r','Position',[-10 50] );
 
 resp = fig2plotly(fig,'strip',false);
 plotly_url = resp.url;
