--- a/_posts/python/static-image/2015-06-30-static-image-export.html
+++ b/_posts/python/static-image/2015-06-30-static-image-export.html
@@ -5,7 +5,7 @@ title: Static Image Export | plotly
 has_thumbnail: true
 thumbnail: thumbnail/png-export.png
 layout: user-guide
-name: static-image-export
+name: Static Image Export
 language: python
 display_as: chart_type
 has_thumbnail: true
