add ipython install info

--- a/_posts/2015-05-25-ipython-notebooks_gallery.html
+++ b/_posts/2015-05-25-ipython-notebooks_gallery.html
@@ -13,6 +13,10 @@ has_thumbnail: false
 <p>
     Instructions on how to install Plotly's Python package can be found on the <a class="no_underline plot-blue" href="{{ site.url }}/python/getting-started">Plotly for Python getting started page</a>.
 </p>
+<br>
+<p>
+    Instructions on how to install IPython can be found <a class="no_underline plot-blue" href="http://ipython.org/install.html">here</a>.
+</p>
 
 <section>
 
