--- a/_posts/pandas/colorlover/2015-06-30-colorlover-with-pandas.html
+++ b/_posts/pandas/colorlover/2015-06-30-colorlover-with-pandas.html
@@ -1,5 +1,5 @@
 ---
-permalink: pandas/colorlover
+permalink: pandas/colorlover/
 description: How to easily add colorscales to pandas dataframe using Colorlover and Plotly.
 title: Pandas Adding Colorscales with Colorlover | plotly
 has_thumbnail: true
