Updates on static-image-export and pandas/colorlover documents

--- a/_posts/python/static-image/2015-06-30-static-image-export.html
+++ b/_posts/python/static-image/2015-06-30-static-image-export.html
@@ -19,7 +19,7 @@ order: 2
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="Static-Image-Export">Static Image Export<a class="anchor-link" href="#Static-Image-Export">&#182;</a></h1><p>Plotly allows you to save static images of your plots. You can either save the image onto your local computer, or embed it inside your Jupyter/IPython notebooks as a static image.</p>
-<h2 id="Save-the-image:">Save the image:<a class="anchor-link" href="#Save-the-image:">&#182;</a></h2><p>To save the image, you need to login to plotly using your credentials (username and API Key). More information regarding the same is available <a href="https://plot.ly/python/getting-started/">here</a></p>
+<h2 id="Save-the-image:">Save the image:<a class="anchor-link" href="#Save-the-image:">&#182;</a></h2><p>To save the image, you need to login to plotly using <a href="https://plot.ly/settings/api">your credentials</a> (username and API Key).</p>
 
 </div>
 </div>
@@ -3106,14 +3106,24 @@ OstMAiRAAiRAAiRAAn5EgILXjyqbRSUBEiABEiABEiABfyRAweuPtc4ykwAJkAAJkAAJkIAfEfh/
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Supported-Formats:">Supported Formats:<a class="anchor-link" href="#Supported-Formats:">&#182;</a></h1><p>The common image formats: 'PNG', 'JPG/JPEG' are supported.In addition, formats like 'EPS', 'SVG' and 'PDF' are also supported.</p>
-<p><strong>Note</strong>: The SVG,EPS and PDF Formats are <em>only</em> available for Plotly Professional users. You can get more details on our <a href="https://plot.ly/products/cloud/">pricing page</a></p>
+<h1 id="Supported-Formats:">Supported Formats:<a class="anchor-link" href="#Supported-Formats:">&#182;</a></h1><p>The common image formats: 'PNG', 'JPG/JPEG' are supported. In addition, formats like 'EPS', 'SVG' and 'PDF' are also supported.</p>
+<p><strong>Note</strong>: The SVG, EPS and PDF Formats are <em>only</em> available for Plotly Professional users. You can get more details on our <a href="https://plot.ly/products/cloud/">pricing page</a></p>
 <p>To access the image in a particular format, you can either:</p>
 <ul>
-<li>append the format extension to the plot url. i.e. the JPEG version of the plot: <a href="https://plot.ly/~chris/1638">https://plot.ly/~chris/1638</a> is available at : <a href="https://plot.ly/~chris/1638.jpg">https://plot.ly/~chris/1638.jpg</a></li>
+<li>append the format extension to the plot url. i.e. the JPG version of the plot: <a href="https://plot.ly/~chris/1638">https://plot.ly/~chris/1638</a> is available at : <a href="https://plot.ly/~chris/1638.jpg">https://plot.ly/~chris/1638.jpg</a></li>
 <li>Add the appropriate extension to the <code>save_as</code> method:
 <code> py.image.save_as(fig, 'chris-plot.jpg')</code></li>
 </ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Saving-Image-data-in-Memory:">Saving Image data in Memory:<a class="anchor-link" href="#Saving-Image-data-in-Memory:">&#182;</a></h2><p>The data from the charts can also be stored in the memory. This reduces the overhead of saving the image in the hard disk. It is particularly useful when the image needs to be embedded (for example in email reports).</p>
 
 </div>
 </div>
