updated 'All Colors' href link

--- a/_posts/pandas/colorlover/2015-06-30-colorlover-with-pandas.html
+++ b/_posts/pandas/colorlover/2015-06-30-colorlover-with-pandas.html
@@ -261,7 +261,7 @@ order: 5
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>List of all the colorscales supported by <code>colorlover</code> is available <a href="http://nbviewer.jupyter.org/gist/jackparmer/4696226c9b6b931bbdf6#All-colors" target="_blank">Here</a></p>
+<p>List of all the colorscales supported by <code>colorlover</code> is available <a href="https://plot.ly/ipython-notebooks/color-scales/#All-colors" target="_blank">Here</a></p>
 
 </div>
 </div>
